# Editor_Texto-TOO

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Editor-Texto.cbp  Editor.sln  EditorTexto.cbp  EditorTexto.depend  EditorTexto.layout  README.md  String.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  et.vcxproj  et.vcxproj.filters  lib.vcxproj  lib.vcxproj.filters  main.cpp  mainSucesso.cpp  mainTeste.cpp
compilacoes/: deu_ruim
et.dir/Debug/et.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
header/: Buffer.h  Core.h  Editor.h  KeyResolver.h  ListaCD.h  ListaCircularDupla.h  ListaSimples.h  Misc.h  MyString.h  Pilha.h  String.h
headers/: ListaCircularDupla.cpp
lib.dir/Debug/lib.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
lib/Debug/: lib.lib
src/: Buffer.cpp  CMakeLists.txt  Editor.cpp  KeyResolver.cpp  ListaCircularDupla.cpp  ListaDuplamenteLigada.cpp  ListaDuplamenteLigada.h  ListaSimples.cpp  MyString.cpp  NoDuplo.cpp  NoDuplo.h  String.cpp  main.cpp
tests/: Testes do Buffer.cpp  mainBonita.cpp  mainCima,PulaLinha,LadoE e LadoD.cpp  mainGotoXY.cpp  mainSubirLinhaBugada.cpp  main_keyresolver.cpp  main_lista-pilha.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
